--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -3266,8 +3266,7 @@ span.you-flag {
 }
 
 #profile-menu .profile-pic-thumbnail {
-    margin: 0;
-    margin-top: 5px;
+    margin: 5px 0 0 0;
     cursor: pointer;
 }
 
@@ -4743,7 +4742,7 @@ div#resource-content {
     right: 26px
 }
 
-.external-profiles .identifier-icon {
+.external-profiles .identifier-icon i, .external-profiles .identifier-icon img {
     border: 1px solid #DDD;
     background: #FFF;
     padding: 1px 1px 1px 2px;
@@ -4751,16 +4750,37 @@ div#resource-content {
     font-size: 24px;
     height: 28px;
     width: 28px;
-    margin: 0 0 0 8px;
-    cursor: pointer
+    cursor: pointer;
+    margin: 0;
+}
+
+.hover-shadow {
+    transition: box-shadow .3s;
+    -webkit-transition: box-shadow .3s;
+    -moz-transition: box-shadow .3s;
+    -o-transition: box-shadow .3s;
+    -ms-transition: box-shadow .3s;
+}
+
+.hover-shadow:hover {
+    -moz-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2);
+}
+
+.external-profiles > a {
+    height: 28px;
+    width: 28px;
+    display: inline-block;
+    margin: 0 8px 0 0;
 }
 
 .external-profiles .fa-address-card {
-    width: initial;
+    width: initial !important;
     padding-right: 2px
 }
 
-.external-profiles, img.identifier-icon {
+.external-profiles, .identifier-icon img {
     margin-top: -11px !important
 }
 
