--- a/hs_explore/templates/recommended_resources.html
+++ b/hs_explore/templates/recommended_resources.html
@@ -7,7 +7,7 @@
                 {% for z in r.keywords.all %}
                     <li> {{ z.value }} 
                         <button class="dismiss-button" style="background:none;border:none;padding:0;"  
-                                onclick="update_recommended('resources', '{{z.key}}', '{{z.value}}')">
+                                onclick="update_resources('{{z.key}}', '{{z.value}}')">
                         <span class="glyphicon glyphicon-remove-circle"></span></button> 
                     </li>
                 {% endfor %}
