--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -208,6 +208,13 @@
                                 <span class="fa fa-folder icon-blue"></span>
                                 <span>New Folder</span>
                             </li>
+                            {% if cm|resource_type == "CompositeResource" %}
+                                <li id="btn-add-reference" data-menu-name="add-reference" data-toggle="modal"
+                                    data-target="#add-reference-dialog">
+                                    <span class="fa fa-link icon-blue"></span>
+                                    <span>Add content from the web</span>
+                                </li>
+                            {% endif %}
                             <li role="separator" class="divider"></li>
                         {% endif %}
                     {% endif %}
@@ -363,7 +370,16 @@
                                                                 data-target="#create-folder-dialog"
                                                             title="Create new folder">
                                                         <span class="fa fa-folder icon-blue"></span>
-                                                    </button>
+                                                        </button>
+                                                    {% endif %}
+
+                                                    {% if cm.resource_type == "CompositeResource" %}
+                                                        <button id="fb-add-reference" class="fb-space-right disabled"
+                                                                data-toggle="modal"
+                                                                data-target="#add-reference-dialog"
+                                                            title="Add content from the web">
+                                                        <span class="fa fa-link icon-blue"></span>
+                                                        </button>
                                                     {% endif %}
 
                                                         {% if cm|resource_type == "Generic" or cm|resource_type == "Model Program Resource" or cm|resource_type == "MODFLOW Model Instance Resource" or cm|resource_type == "SWAT Model Instance Resource" or cm|resource_type == "Model Instance Resource" or cm.resource_type == "CompositeResource"  %}
