--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1815,7 +1815,7 @@
     </div>
 </div>
 
-<div class="modal fade in" id="add-reference-dialog" tabindex="-1" role="dialog"
+<div class="modal fade in" id="add-reference-url-dialog" tabindex="-1" role="dialog"
      aria-labelledby="add-reference" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
