further refinement and first pass of backend implementation

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -208,7 +208,7 @@
                                 <span class="fa fa-folder icon-blue"></span>
                                 <span>New Folder</span>
                             </li>
-                            <li id="btn-add-reference" data-menu-name="add-reference" data-toggle="modal"
+                            <li id="mnu-add-reference" data-menu-name="add-reference" data-toggle="modal"
                                 data-target="#add-reference-url-dialog">
                                 <span class="fa fa-link icon-blue"></span>
                                 <span>Add content from the web</span>
