--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1845,7 +1845,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" id="btn-add-reference" class="btn btn-primary disabled" data-dismiss="modal">Save
+                <button type="button" id="btn-add-reference-url" class="btn btn-primary disabled" data-dismiss="modal">Save
                 </button>
             </div>
         </div>
