updated file icon

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -210,7 +210,7 @@
                             </li>
                             <li id="mnu-add-reference" data-menu-name="add-reference" data-toggle="modal"
                                 data-target="#add-reference-url-dialog">
-                                <span class="fa fa-link icon-blue"></span>
+                                <span class="fa fa-external-link icon-blue"></span>
                                 <span>Add content from the web</span>
                             </li>
                             <li role="separator" class="divider"></li>
@@ -376,7 +376,7 @@
                                                                 data-toggle="modal"
                                                                 data-target="#add-reference-url-dialog"
                                                             title="Add content from the web">
-                                                        <span class="fa fa-link icon-blue"></span>
+                                                        <span class="fa fa-external-link icon-blue"></span>
                                                         </button>
                                                     {% endif %}
 
