added notification messaging

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -492,7 +492,7 @@
                                 </form>
                             </div>
                             <div id="ref_file_note" class="text-muted division-title-caption"
-                                    {% if not SHOW_REFERENCE_FILE_NOTE %} hidden {% endif %}>
+                                    {% if not show_web_reference_note %} hidden {% endif %}>
                             Please note: This resource contains links to external content. Linked content is NOT stored in
                             HydroShare, and we can't guarantee its availability, quality, or security.
                             </div>
