--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1913,6 +1913,26 @@
     </div>
 </div>
 
+<div class="modal fade" id="redirect-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="redirect-referenced-url-title">Redirecting to the referenced web URL</h4>
+            </div>
+            <div class="modal-body">
+                The content you have requested to access is not stored in HydroShare, and we can’t guarantee its availability,
+                quality, security, or size. If the externally linked content is large, access may take time.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <a type="button" class="btn btn-primary"
+                   href="" target="_blank">Redirect</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade in" id="get-file-url-dialog" tabindex="-1" role="dialog"
      aria-labelledby="rename" aria-hidden="false">
     <div class="modal-dialog">
