get redirect working

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1913,7 +1913,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="redirect-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="redirect-referenced-url-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -1926,8 +1926,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <a type="button" class="btn btn-primary"
-                   href="" target="_blank">Redirect</a>
+                <a id="file_redirect_url" type="button" class="btn btn-primary" href="#" target="_blank">Redirect</a>
             </div>
         </div>
     </div>
